Updates to newer dependencies and makes this library work for Dropwizard 3